Fix section alignment when navigating from navbar

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,24 +1,11 @@
-.about{
-    display: flex;
 
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    background-color: #0a1124;
-}
 
-.about-title{
-    align-items: center;
-    align-content: center;
-    margin-bottom: 40px;
-}
 
 .about-content {
     display: flex;
     flex-direction: row;
-    margin-left: clamp(10px, 5vw, 60px);
-    margin-right: clamp(10px, 5vw, 60px);
+    margin-left: clamp(10px, 20vw, 200px);
+    margin-right: clamp(10px, 20vw, 200px);
     gap: 40px;
     margin-top: 40px;
     margin-bottom: 105px;
