--- a/src/Components/Project/Project.css
+++ b/src/Components/Project/Project.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 100px;
+  margin-top: 100px;
 }
 
 .subtitle {
