--- a/src/index.css
+++ b/src/index.css
@@ -11,5 +11,5 @@ body{
 }
 
 section {
-  scroll-margin-top: 30px;
+  scroll-margin-top: 100px;
 }
